[package]
name = "AnotherWordBreaker"
version = "0.1.0"
edition = "2021"
authors = ["Aokiji"]
description = "Test word breaker"

[dependencies]
# allow korean specialized tokenization
lindera = { version = "=0.32.2", features = ["ko-dic", "compress"] }
once_cell = "1.19.0"

[lib]
crate-type = ["lib", "dylib"]

[features]
# allow korean specialized tokenization
korean = ["lindera/ko-dic", "lindera/compress"]